--- a/style.css
+++ b/style.css
@@ -5,3 +5,25 @@
     font-family: "Inter", sans-serif;
 }
 
+body {
+    background-color: #141414;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div {
+     background-color: #1f1f1f;
+     width: 384px;
+     padding: 40px;
+     text-align: center;
+     border-radius: 12px;
+
+}
+ 
+div img {
+    border-radius: 50%;
+    margin-bottom: 24px;
+    
+}
